--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "socket": "nodemon ./src/socket/index.js",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -25,11 +26,14 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "js-md5": "^0.7.3",
     "moment": "^2.29.1",
     "node-sass": "^4.12.0",
+    "nodemon": "^2.0.7",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "ws": "^7.4.4"
   },
   "eslintConfig": {
     "root": true,
