--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "socket": "nodemon ./src/socket/index.js",
+    "start": "npm-run-all --serial serve socket",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -30,6 +31,8 @@
     "moment": "^2.29.1",
     "node-sass": "^4.12.0",
     "nodemon": "^2.0.7",
+    "npm-check": "^5.9.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11",
