--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "ant-design-vue": "^1.7.2",
+    "echarts": "^5.0.2",
     "js-md5": "^0.7.3",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-sass": "^4.12.0",
     "nodemon": "^2.0.7",
