--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-service": "~4.5.0",
     "ant-design-vue": "^1.7.2",
     "echarts": "^5.0.2",
+    "image-webpack-loader": "^7.0.1",
     "js-md5": "^0.7.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -31,6 +32,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vue-template-compiler": "^2.6.11",
     "ws": "^7.4.4"
   },
