--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "nodemon": "^2.0.7",
     "npm-check": "^5.9.2",
     "npm-run-all": "^4.1.5",
+    "pdfjs-dist": "^2.7.570",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "vue-pdf": "^4.2.0",
     "vue-template-compiler": "^2.6.11",
     "ws": "^7.4.4"
   },
